Contexto y registro creado etc
Faltan arreglar detalles

--- a/src/app/pages/contexto/contexto.page.html
+++ b/src/app/pages/contexto/contexto.page.html
@@ -5,10 +5,27 @@
         <ion-icon slot="start" name="menu-outline" color="primary"></ion-icon>
        </ion-button>
     </ion-buttons>
-    <ion-title>contexto</ion-title>
+    <ion-title>Contexto</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+  <ion-card class="cardContext">
+    <ion-card-header>
+      <ion-card-subtitle>Para que tu retorno sea más agradable</ion-card-subtitle>
+      <ion-card-title>Usa TeLlevo</ion-card-title>
+    </ion-card-header>
+
+    <img src="assets/DUOCUC.jpg" alt="">
+  
+    <ion-card-content>
+      <p class="parrafo"> 
+        Debido a la abrupta vuelta a clases y la dificil gestión de la institucion, se ha visto de manera afectada el retorno a clase de los alumnos de DUOC UC.
+        Como alumnos de la institucion y de la rama de informática, una de nuestras propuestas es crear una APK en la cual los alumnos que tengan transporte puedan ofrecerle una ayuda a los alumnos que necesitan de estos, actuando de una forma similar a la aplicación llamada UBER, de una forma sencilla y rápida. 
+      </p>
+    
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
