--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -13,7 +13,7 @@
 <ion-content class="body">
 
   <h1 class="header1">Organizate con tus compañeros y ten un viaje seguro!</h1>
-  <ion-card>
+  <ion-card class="cardInicio">
     <img src="assets/taxi.jpg" class="ion-padding">
     <ion-card-content>
       
