--- a/src/app/pages/inicio/inicio.page.scss
+++ b/src/app/pages/inicio/inicio.page.scss
@@ -1,5 +1,5 @@
 ion-content{
-    --ion-background-color: #FAFAFA;
+    --ion-background-color: #222F52;
 }
 
 
@@ -11,4 +11,8 @@ ion-content{
 
 .taxi {
     border-radius: 5px;
+}
+
+.cardInicio {
+    background-color: #EFC438;
 }
