--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -5,8 +5,14 @@
         <ion-icon slot="icon-only" name="menu-outline" color="primary"></ion-icon>
       </ion-button>
     </ion-buttons>
-
-    <ion-title>TeLlevo</ion-title>
+    
+    <ion-title>TeLlevo</ion-title> 
+    <ion-list-header>
+      <ion-label></ion-label>
+      <ion-button (click)="input()" class="button button-small">inicio</ion-button>
+      <ion-button class="button button-small" >Logout</ion-button>
+    </ion-list-header>
+    
   </ion-toolbar>
 </ion-header>
 
